Implement better methods for exporting images

--- a/aoi_mapper/backgroundRemoval.ipynb
+++ b/aoi_mapper/backgroundRemoval.ipynb
@@ -133,6 +133,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Define Constants"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "blackWhiteThreshold: int = 128  # Any value >= to this is black, else white"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Application"
       ]
     },
@@ -321,7 +337,8 @@
         "\n",
         "    foreground = numpy.where(saturation + colorValue > 0, 1, 0).astype(numpy.uint8)\n",
         "\n",
-        "    foreground[foreground > 0] = 255    # Convert from grayscale to black and white\n",
+        "    foreground: ndarray = numpy.where(foreground >= blackWhiteThreshold, 255, 0)\n",
+        "\n",
         "\n",
         "    cv2.imwrite(outputPath, foreground)"
       ]
