--- a/aoi_mapper/segmentation.ipynb
+++ b/aoi_mapper/segmentation.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,7 +39,16 @@
         "id": "TTjj0EYGfmxm",
         "outputId": "dfeada01-f30e-4604-970a-b3a9d7576a77"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: pip in /home/linuxbrew/.linuxbrew/lib/python3.10/site-packages (22.3)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install --upgrade pip"
       ]
@@ -60,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +77,18 @@
         "id": "sXq-rWDCJd4w",
         "outputId": "78cea49b-95c8-4ca9-a64f-bbd29844412a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: opencv-contrib-python in /home/linuxbrew/.linuxbrew/lib/python3.10/site-packages (4.6.0.66)\n",
+            "Requirement already satisfied: progress in /home/linuxbrew/.linuxbrew/lib/python3.10/site-packages (1.6)\n",
+            "Requirement already satisfied: numpy>=1.21.2 in /home/linuxbrew/.linuxbrew/lib/python3.10/site-packages (from opencv-contrib-python) (1.23.3)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install opencv-contrib-python progress"
       ]
@@ -84,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "E4vBBhvvfD_u"
       },
@@ -113,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,6 +145,22 @@
       "source": [
         "#from google.colab import drive\n",
         "#drive.mount('/content/gdrive')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define Constants"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "blackWhiteThreshold: int = 128  # Any value >= to this is black, else white"
       ]
     },
     {
@@ -145,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -174,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -192,7 +228,7 @@
         "    image: ndarray = cv2.imread(imagePath)\n",
         "    imageShape: tuple = image.shape\n",
         "\n",
-        "    grayImage: ndarray = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY) \n",
+        "    grayImage: ndarray = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
         "    \n",
         "    _, threshold = cv2.threshold(grayImage, numpy.mean(grayImage), 255, cv2.THRESH_BINARY_INV)\n",
         "    edges: ndarray = cv2.dilate(cv2.Canny(threshold, 0, 255), None)\n",
@@ -202,9 +238,8 @@
         "    mask: ndarray = numpy.zeros(imageShape, numpy.uint8)\n",
         "    \n",
         "    segmented: ndarray = cv2.drawContours(mask, [contours],-1, 255, -1)\n",
-        "    segmented = cv2.cvtColor(segmented, cv2.COLOR_BGR2GRAY)\n",
-        "    segmented[segmented > 0] = 255    # Convert from grayscale to black and white\n",
-        "\n",
+        "    segmented: ndarray = numpy.where(segmented >= blackWhiteThreshold, 255, 0)\n",
+        "    \n",
         "    cv2.imwrite(outputPath, segmented)"
       ]
     },
@@ -217,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
